# Xlang

./: CMakeLists.txt  Makefile  README-CN.md  README.md  README_zh-cn.md  install.sh  main.cpp  test  test.cpp  test.xlang  test.xvm  test_lex  test_lex.cpp  test_output.xasm  xlang  xlang.cpp
.github/workflows/: Linux.yml
backend/: BytecodeGenerateException.cpp  BytecodeGenerateException.hpp  BytecodeGenerator.cpp  BytecodeGenerator.hpp  ConstantPoolItem.cpp  ConstantPoolItem.hpp  EmulateStack.cpp  EmulateStack.hpp  GlobalEnvironment.cpp  GlobalEnvironment.hpp  LocalEnvironment.cpp  LocalEnvironment.hpp  SymbolTableItem.cpp  SymbolTableItem.hpp  Typename.cpp  Typename.hpp  TypenameDerive.cpp  TypenameDerive.hpp  XlangClass.cpp  XlangClass.hpp  XlangFunction.cpp  XlangFunction.hpp
bytecode/: BytecodeCommand.cpp  BytecodeCommand.hpp  BytecodeCommandArray.cpp  BytecodeCommandArray.hpp  Operand.cpp  Operand.hpp
compiler/: basic_type.cpp  compiler.cpp  core.cpp  error.cpp  lexer.cpp
compiler/docs/: about_vm.md
docs/: ArrayDesign.md  Bytecode.md  BytecodeGeneratingOfIfStatement.md  BytecodeOfMemberExpressionGenerating.md  GrammarDocument.md  ParsingFunctionCallingStatement.md  README.md  SyntaxDocument.md
examples/: hello.xlang
frontend/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp  SourceFileAnalyzer.cpp  SourceFileAnalyzer.hpp
frontend/parsers/: AccessDescriptorNodeGenerator.cpp  AccessDescriptorNodeGenerator.hpp  AdditionExpressionNodeGenerator.cpp  AdditionExpressionNodeGenerator.hpp  AdditionExpressionNodeGrammar.cpp  AdditionExpressionNodeGrammar.hpp  ArgumentsNodeGenerator.cpp  ArgumentsNodeGenerator.hpp  AssignmentExpressionNodeGenerator.cpp  AssignmentExpressionNodeGenerator.hpp  BaseGenerator.cpp  BaseGenerator.hpp  BinaryExpressionNodeGenerator.cpp  BinaryExpressionNodeGenerator.hpp  BinaryMoveExpressionNodeGenerator.cpp  BinaryMoveExpressionNodeGenerator.hpp  BreakStatementNodeGenerator.cpp  BreakStatementNodeGenerator.hpp  CodeBlockNodeGenerator.cpp  CodeBlockNodeGenerator.hpp  ComparingExpressionNodeGenerator.cpp  ComparingExpressionNodeGenerator.hpp  ContinueStatementNodeGenerator.cpp  ContinueStatementNodeGenerator.hpp  DecrementExpressionNodeGenerator.cpp  DecrementExpressionNodeGenerator.hpp  EqualExpressionNodeGenerator.cpp  EqualExpressionNodeGenerator.hpp  ExpressionNodeGenerator.cpp  ExpressionNodeGenerator.hpp  ExtendPrimaryNodeGenerator.cpp  ExtendPrimaryNodeGenerator.hpp  ForStatementNodeGenerator.cpp  ForStatementNodeGenerator.hpp  FunctionCallingExpressionNodeGenerator.cpp  FunctionCallingExpressionNodeGenerator.hpp  FunctionDefinitionNodeGenerator.cpp  FunctionDefinitionNodeGenerator.hpp  GlobalStatementNodeGenerator.cpp  GlobalStatementNodeGenerator.hpp  (+34 more)
lib/XVMDK/: dlfcn.h  framework.cpp
lib/vmlib@latest/: array.xlang  heap.xlang  io.xlang  main.xlang  vmapi.xlang
lib/vmlib@latest/native/: Makefile  basicio  basicio.cpp  basicio.device  heap  heap.cpp  vmlib  vmlib.cpp
share/: FileStream.cpp  FileStream.hpp  G.txt  HashLib.cpp  HashLib.hpp  IOStream.cpp  IOStream.hpp  StringUtils.cpp  StringUtils.hpp  XlangException.cpp  XlangException.hpp  config.hpp
test.dSYM/Contents/: Info.plist
test.dSYM/Contents/Resources/DWARF/: test
test_lex.dSYM/Contents/: Info.plist
test_lex.dSYM/Contents/Resources/DWARF/: test_lex
testing/: stack_test  stack_test.cpp  testfile.xlang
vm/: const.cpp  core.cpp  docs.md  test.vme  vm  vm.cpp
vm/vm.dSYM/Contents/: Info.plist
vm/vm.dSYM/Contents/Resources/DWARF/: vm
xlang.dSYM/Contents/: Info.plist
xlang.dSYM/Contents/Resources/DWARF/: xlang
xtimevm/: XlangClass.cpp  XlangClass.hpp
